--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "A website for adjudicators",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "jquery": "^3.1.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack": "^1.13.3"
+  },
   "scripts": {
+    "install": "webpack",
     "start": "node index.js"
   },
   "repository": {
