--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
-    "jquery": "^3.1.1"
-  },
-  "devDependencies": {
+    "jquery": "^3.1.1",
     "webpack": "^1.13.3"
   },
   "scripts": {
