--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "A website for adjudicators",
   "main": "index.js",
   "dependencies": {
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
     "express": "^4.14.0",
     "jquery": "^3.1.1",
     "webpack": "^1.13.3"
