--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-react": "^6.16.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "mongodb": "^2.2.12",
     "react": "^15.4.1",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
